<resources>
    <string name="app_name">Speech Data Collection</string>

    <!-- Buttons and other general strings -->
    <string name="exit">Exit</string>
    <string name="exit_confirmation_message">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="agree">Agree</string>
    <string name="confirm">Confirm</string>
    <string name="retry">Retry</string>
    <string name="unknown">Unknown</string>
    <string name="an_error_has_occurred">Sorry, an error has occurred while loading this page. Please check your internet connection, try again later or contact the administrator of this application. Details:\n\n%1$s</string>

    <!-- Welcome screen -->
    <string name="title_welcome">Welcome</string>
    <string name="welcome_text">Welcome to the Speech Data Collection app!  Speech data is a collection of recorded audio clips of spoken human speech. This data is useful for training voice recognition systems and other research related to human speech. However, it is not always easy for researchers to get the data they need. The purpose of this application is to help with such data collection efforts by allowing users to anonymously record their speech on a mobile device and send the resulting data to the researchers.</string>

    <!-- Terms screen -->
    <string name="title_terms">Terms</string>
    <string name="terms_instructions">In order to use this app, you must first read and agree to the following terms:</string>

    <!-- Profile screen -->
    <string name="title_profile">Profile</string>
    <string name="profile_description">Please enter your details to be associated with your recordings:</string>
    <string name="year_of_birth">Year of birth</string>
    <string name="gender">Gender</string>
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
        <item>Other / Undisclosed</item>
    </string-array>
    <string name="native_language">Native language (optional)</string>
    <string-array name="native_language_list">
        <item>Estonian</item>
        <item>Russian</item>
        <item>English</item>
        <item>Finnish</item>
        <item>Latvian</item>
        <item>Other / Undisclosed</item>
    </string-array>
    <string name="dialect">Dialect (optional)</string>
    <string-array name="dialect_list">
        <item>None</item>
        <item>Ida</item>
        <item>Kesk</item>
        <item>Lääne</item>
        <item>Mulgi</item>
        <item>Ranniku</item>
        <item>Saare</item>
        <item>Tartu</item>
        <item>Võru</item>
        <item>Other / Undisclosed</item>
    </string-array>
    <string name="field_required">This field is required.</string>

    <!-- Project selection screen -->
    <string name="title_project_selection">Select Project</string>
    <string name="project_selection_instructions">You have entered your details and agreed to the terms. Please select a project you wish to participate in:</string>
    <string name="project_status">%1$d%% completed</string>
    <string name="project_can_be_repeated">(can be repeated)</string>
    <string name="project_description">Number of prompts: %1$d\nTimes completed: %2$d\nDescription: %3$s</string>
    <string name="start_recording">Start Recording</string>

    <!-- Recording screen -->
    <string name="title_recording_screen">Record: %1$s</string>
    <string name="default_recording_instructions">Please read the following prompt while recording it using the button below.</string>
    <string name="start_recording_instructions">Press to start voice recording.</string>
    <string name="stop_recording_instructions">Recording. Speak now. Press to stop.</string>
    <string name="default_image_instructions">Please describe the image below.</string>
    <string name="please_allow_recording_permissions">Please allow recording permissions.</string>
    <string name="project_completed_message">Project completed! Thank you for participating.</string>
    <string name="project_already_completed">You have already completed this project and cannot start another session.</string>

    <!-- Internal strings -->
    <string name="api_base_url" translatable="false">https://example.com/api/</string>
    <string name="has_accepted_terms_key" translatable="false">hasAcceptedTerms</string>
    <string name="device_id_key" translatable="false">deviceId</string>
    <string name="temp_recording_filename" translatable="false">temp_recording.wav</string>
</resources>
